# color-backtrace

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  azure-pipelines.yml
.github/workflows/: main.yml
examples/: assert_failed.rs  custom_message.rs  failure.rs  fmt_to_string.rs  fmt_to_string_std.rs  force_color.rs  panic_macro.rs  unwrap_result.rs
src/: backdoortrace.rs  bin.rs  failure.rs  lib.rs
