[package]
name = "color-backtrace"
version = "0.5.0"
authors = ["Joel Höner <athre0z@zyantific.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/athre0z/color-backtrace"
description = "Colorful panic backtraces"
readme = "README.md"

keywords = [
    "backtrace",
    "color",
    "colour",
    "stacktrace",
    "pretty",
]

[features]
default = ["gimli-symbolize"]
gimli-symbolize = ["backtrace/gimli-symbolize"]
resolve-modules = ["regex"]

[dependencies]
termcolor = "1.0"
atty = "0.2"
backtrace = "0.3"
regex = { version = "1.4", optional = true }
