[package]
name = "color-backtrace"
version = "0.6.1"
authors = ["Joel Höner <athre0z@zyantific.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/athre0z/color-backtrace"
description = "Colorful panic backtraces"
readme = "README.md"
rust-version = "1.70"

keywords = [
    "backtrace",
    "color",
    "colour",
    "stacktrace",
    "pretty",
]

[features]
default = []
resolve-modules = ["regex"]

# Deprecated, no longer has any effect: backtrace crate removed corresponding option.
gimli-symbolize = []

[dependencies]
termcolor = "1.1.2"
backtrace = "0.3.57"
regex = { version = "1.4.6", optional = true }
